# hesapmak

./: CMakeLists.txt  hesap.cpp  hesap.h  hesap.ui  main.cpp
